[gd_scene load_steps=3 format=3 uid="uid://djb0ao8st3a0k"]

[ext_resource type="Script" uid="uid://j42apd0ldaf5" path="res://entities/player/player_select_target.gd" id="1_ad6co"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qckfs"]

[node name="PlayerSelectTarget" type="Area3D"]
collision_layer = 2147483648
collision_mask = 15
script = ExtResource("1_ad6co")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_qckfs")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
